displaying previously entered entities

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -76,7 +76,7 @@
                 </ul>
             </li>
             <li class="nav-item" id="data-display">
-                <a class="nav-link" href="{{url_for('create',entity='coach')}}">
+                <a class="nav-link" href="{{url_for('create',entity_type='coach')}}">
                     <i class="bi bi-table"></i> Coaches</a>
             </li>
         </ul>
