--- a/server/templates/add-or-update-entity.html
+++ b/server/templates/add-or-update-entity.html
@@ -12,12 +12,36 @@
 
 {% block content %}
 {{super()}}
+
 <div class="container">
     <h1>{{title}}</h1>
+    <table class="bordered">
+        <tr>
+            {% for headline in title_row %}
+            <th>{{headline}}</th>
+            {% endfor %}
+            <th></th>
+            <th></th>
+        </tr>
+        {% for entity in table %}
+        <tr>
+            {% for value in entity %}
+            {% if loop.index < entity|length %}
+            <td>{{value}}</td>
+            {% else %}
+            <td>{{value}}</td>
+            <td>value</td>
+            {% endif %}
+            {% endfor %}
+        </tr>
+        {% endfor %}
+
+    </table>
+    <h2>Add new {{title}}</h2>
     {{ wtf.quick_form(form,novalidate=True) }}
     <div class="row">
         <a href="{{url_for('home')}}" class="btn btn-outline-warning">
-            <i class="bi bi-table"></i> Zur Übersicht</a>
+            <i class="bi bi-table"></i> Home</a>
     </div>
 
 </div>
