--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -75,9 +75,17 @@
                 <ul class="dropdown-menu">
                 </ul>
             </li>
-            <li class="nav-item" id="data-display">
+            <li class="nav-item" id="races">
+                <a class="nav-link" href="{{url_for('create',entity_type='race')}}">
+                    <i class="bi bi-robot"></i> Races</a>
+            </li>
+            <li class="nav-item" id="coaches">
                 <a class="nav-link" href="{{url_for('create',entity_type='coach')}}">
-                    <i class="bi bi-table"></i> Coaches</a>
+                    <i class="bi bi-person-square"></i> Coaches</a>
+            </li>
+            <li class="nav-item" id="teams">
+                <a class="nav-link" href="{{url_for('create',entity_type='team')}}">
+                    <i class="bi bi-people-fill"></i> Teams</a>
             </li>
         </ul>
     </div>
