--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -82,7 +82,7 @@
             {% if nav_properties.selected_league %}
             <li class="nav-item" id="coaches">
                 <a class="nav-link" href="{{url_for('manage',entity_type='coach')}}">
-                    <i class="bi bi-robot"></i> Coaches</a>
+                    <i class="bi bi-person-square"></i> Coaches</a>
             </li>
             {% endif %}
             <li class="nav-item" id="races">
