--- a/server/templates/manage_entities.html
+++ b/server/templates/manage_entities.html
@@ -80,6 +80,10 @@
     <h1>{{title}}</h1>
 </div>
 <div class="container">
+    <h2 id="form-title">Add new {{title}}</h2>
+    {{ wtf.quick_form(form,novalidate=True) }}
+</div>
+<div class="container">
     <table class="bordered">
         <tr>
             {% for headline in title_row %}
@@ -89,7 +93,7 @@
             <th></th>
         </tr>
         {% for entity in table %}
-        <tr>
+        <tr id="row-entity-{{ entity|last }}">
             {% for value in entity %}
             {% if loop.index < entity|length %}
             <td>{% if value %}
@@ -102,7 +106,7 @@
             </td>
             {% else %}
             <td>
-                <a href="{{ url_for('manage',entity_type=entity_type,id=value,_anchor='form-title') }}"
+                <a href="{{ url_for('manage',entity_type=entity_type,id=value) }}"
                    class="btn btn-outline-warning">
                     <i class="bi bi-pencil"></i>
                 </a>
@@ -118,13 +122,5 @@
 
     </table>
 </div>
-<div class="container">
-    <h2 id="form-title">Add new {{title}}</h2>
-    {{ wtf.quick_form(form,novalidate=True) }}
-    <div class="row">
-        <a href="{{url_for('home')}}" class="btn btn-outline-warning">
-            <i class="bi bi-table"></i> Home</a>
-    </div>
 
-</div>
 {% endblock %}
