--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -1,4 +1,5 @@
 {% extends 'bootstrap/base.html' %}
+{% block title %}Blood Bowl{% endblock %}
 {%block styles %}
 {{super()}}
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
