--- a/server/templates/manage_entities.html
+++ b/server/templates/manage_entities.html
@@ -1,6 +1,6 @@
 {% extends 'base-form.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block title %}{{title}}{% endblock %}
+{% block title %}{{super()}} | {{title}}{% endblock %}
 
 {% block scripts %}
 {{super()}}
