--- a/server/static/css/styles.css
+++ b/server/static/css/styles.css
@@ -111,9 +111,13 @@ a:focus,
     background-color: var(--background);
 }
 
-.bordered, .bordered th, .bordered td{
+.bordered, .bordered th, .bordered td {
     border: 1px solid var(--table-border);
     padding: 0.2rem;
+}
+
+.bordered th {
+    text-align: center;
 }
 
 .bordered tr:nth-of-type(even) td {
@@ -124,11 +128,11 @@ a:focus,
     background: #444;
 }
 
-.bordered tr:nth-of-type(even)>td.highlight-table-cell {
+.bordered tr:nth-of-type(even) > td.highlight-table-cell {
     background: var(--dark-yellow);
 }
 
-.bordered tr:nth-of-type(odd)>td.highlight-table-cell {
+.bordered tr:nth-of-type(odd) > td.highlight-table-cell {
     background: var(--darker-yellow);
 }
 
