--- a/server/templates/imaging/teams_table_for_image.html
+++ b/server/templates/imaging/teams_table_for_image.html
@@ -7,9 +7,16 @@
         /*@formatter:off*/
         {{css_content|safe}}
         /*@formatter:on*/
+        .date-line {
+            text-align: right;
+        }
     </style>
 </head>
 <body>
+<h1>{{league.name}} | {{season.name}}</h1>
 {% include 'fragments/teams_table.html' %}
+<div class="date-line">
+    <p>Stand: {{creation_date}}</p>
+</div>
 </body>
 </html>
