--- a/server/templates/imaging/teams_table_for_image.html
+++ b/server/templates/imaging/teams_table_for_image.html
@@ -2,15 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
-    <style>
-        /*@formatter:off*/
-        {{css_content|safe}}
-        /*@formatter:on*/
-        .date-line {
-            text-align: right;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <h1>{{league.name}} | {{season.name}}</h1>
