--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'layout/base.html' %}
 {% block title %}{{super()}} | Overview{% endblock %}
 {% block content %}
 {{super()}}
