--- a/server/templates/layout/base-form.html
+++ b/server/templates/layout/base-form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'layout/base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
 {%block scripts %}
 {{super()}}
