--- a/server/templates/manage_entities.html
+++ b/server/templates/manage_entities.html
@@ -1,4 +1,4 @@
-{% extends 'base-form.html' %}
+{% extends 'layout/base-form.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
 {% block title %}{{super()}} | {{title}}{% endblock %}
 
