uploading logo image is working

--- a/server/templates/imaging/teams_table_for_image.html
+++ b/server/templates/imaging/teams_table_for_image.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<img src="logo_league_{{league.id}}.png">
 <h1>{{league.name}} | {{season.name}}</h1>
 {% include 'fragments/teams_table.html' %}
 <div class="date-line">
