--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -8,13 +8,17 @@
         {% if nav_properties.selected_league %}
         {{nav_properties.selected_league.short_name}}{% if nav_properties.selected_season %} | {{nav_properties.selected_season.name}}{%endif%}{%endif%}</h1>
 </div>
+{% if team_results|length == 0 %}
+<div class="container">
+    <h2>No teams entered so far</h2>
+</div>
+{% else %}
 <div class="container">
     <h2>Teams</h2>
 </div>
 <div class="container">
     {% include 'fragments/teams_table.html' %}
 </div>
-
 
 <div class="container">
     <h2>Coaches</h2>
@@ -28,4 +32,5 @@
 <div class="container">
     {% include 'fragments/races_table.html' %}
 </div>
+{% endif %}
 {% endblock %}
