added casualty parsing start

--- a/server/templates/layout/base.html
+++ b/server/templates/layout/base.html
@@ -47,6 +47,10 @@
                 <a class="nav-link" href="{{url_for('manage',entity_type='bb_match')}}">
                     <i class="bi bi-dice-3-fill"></i> Matches</a>
             </li>
+            <li class="nav-item" id="additional-statistics">
+                <a class="nav-link" href="{{url_for('manage',entity_type='additional_statistics')}}">
+                    <i class="bi bi-table"></i> Additional Statistics</a>
+            </li>
             <li class="nav-item" id="teams">
                 <a class="nav-link" href="{{url_for('manage',entity_type='team')}}">
                     <i class="bi bi-people-fill"></i> Teams</a>
