casualties table is workings

--- a/server/templates/imaging/teams_table_for_image.html
+++ b/server/templates/imaging/teams_table_for_image.html
@@ -11,9 +11,15 @@
 </div>
 <div class="framed-table">
     {% include 'fragments/teams_table.html' %}
-    <div class="date-line">
-        <p>Stand: {{creation_date}}</p>
-    </div>
+</div>
+<div class="title-row">
+    <h2>Casualties</h2>
+</div>
+<div class="framed-table">
+    {% include 'fragments/teams_casualties_table.html' %}
+</div>
+<div class="date-line">
+    <p>Stand: {{creation_date}}</p>
 </div>
 </body>
 </html>
