--- a/server/static/css/styles.css
+++ b/server/static/css/styles.css
@@ -39,6 +39,10 @@ h2 {
     color: var(--sub-headline);
 }
 
+h3, h4, h5, h6 {
+    font-family: 'Nuffle', sans-serif;
+}
+
 .dropdown-menu {
     background-color: var(--nav-background);
 }
