--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -26,6 +26,12 @@
 <div class="container">
     {% include 'fragments/teams_table.html' %}
 </div>
+<div class="container">
+    <h3>Casualties</h3>
+</div>
+<div class="container">
+    {% include 'fragments/teams_casualties_table.html' %}
+</div>
 
 <div class="container">
     <h2>Coaches</h2>
@@ -41,6 +47,12 @@
     {% include 'fragments/coaches_table.html' %}
 </div>
 <div class="container">
+    <h3>Casualties</h3>
+</div>
+<div class="container">
+    {% include 'fragments/coaches_casualties_table.html' %}
+</div>
+<div class="container">
     <h2>Races</h2>
 </div>
 <div class="container">
@@ -52,6 +64,12 @@
 </div>
 <div class="container">
     {% include 'fragments/races_table.html' %}
+</div>
+<div class="container">
+    <h3>Casualties</h3>
+</div>
+<div class="container">
+    {% include 'fragments/races_casualties_table.html' %}
 </div>
 {% endif %}
 {% endblock %}
