--- a/server/templates/imaging/coaches_table_for_image.html
+++ b/server/templates/imaging/coaches_table_for_image.html
@@ -12,9 +12,16 @@
 </div>
 <div class="framed-table">
     {% include 'fragments/coaches_table.html' %}
-    <div class="date-line">
-        <p>Stand: {{creation_date}}</p>
-    </div>
+</div>
+
+<div class="title-row">
+    <h2>Casualties</h2>
+</div>
+<div class="framed-table">
+    {% include 'fragments/coaches_casualties_table.html' %}
+</div>
+<div class="date-line">
+    <p>Stand: {{creation_date}}</p>
 </div>
 </body>
 </html>
