--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -23,13 +23,13 @@
         Teams Table Download
     </a>
 </div>
-<div class="container">
+<div class="container container-table">
     {% include 'fragments/teams_table.html' %}
 </div>
-<div class="container">
+<div class="container container-table">
     <h3>Casualties</h3>
 </div>
-<div class="container">
+<div class="container container-table">
     {% include 'fragments/teams_casualties_table.html' %}
 </div>
 
@@ -43,13 +43,13 @@
         Coaches Table Download
     </a>
 </div>
-<div class="container">
+<div class="container container-table">
     {% include 'fragments/coaches_table.html' %}
 </div>
 <div class="container">
     <h3>Casualties</h3>
 </div>
-<div class="container">
+<div class="container container-table">
     {% include 'fragments/coaches_casualties_table.html' %}
 </div>
 <div class="container">
@@ -62,13 +62,13 @@
         Races Table Download
     </a>
 </div>
-<div class="container">
+<div class="container container-table">
     {% include 'fragments/races_table.html' %}
 </div>
 <div class="container">
     <h3>Casualties</h3>
 </div>
-<div class="container">
+<div class="container container-table">
     {% include 'fragments/races_casualties_table.html' %}
 </div>
 {% endif %}
