--- a/server/templates/manage_entities.html
+++ b/server/templates/manage_entities.html
@@ -82,7 +82,7 @@
 <div class="container">
     {{ wtf.quick_form(form,novalidate=True) }}
 </div>
-<div class="container">
+<div class="container container-table">
     <table class="bordered">
         <tr>
             <th>#</th>
